Fixed v-alignment in links rendering

--- a/react-quantum/src/views/Game.css
+++ b/react-quantum/src/views/Game.css
@@ -1,9 +1,15 @@
 .tile {
-    width: 20%; /* 100% / 4 squares = 25%, 5% subtracted for margin */
-    padding-bottom: 20%; /* Forces tile to be square shaped, I actually have no idea why this works and I'm too lazy to work it out. */
-    margin: 2.5%; /* That 5% is split for left/right and top/bottom */
+    width: 23%; /* 100% / 4 squares = 25%, 5% subtracted for margin */
+    /* padding-bottom: 23%; */
+    margin: 1%; /* That 5% is split for left/right and top/bottom */
     border: 2px solid black;
 }
+.tile:after {
+    content: "";
+    display: block;
+    padding-bottom: 100%;
+}
+
 
 .whiteTile {
     background: white;
@@ -15,10 +21,20 @@
 
 .link {
     z-index: 5;
-    width: 20%;
+    width: 30px;
+    height: 30px;
     position: absolute;
-    text-align: center;
-    font-size: calc(25% + 3vw + 3vh);
+    font-size: calc(25% + 2vw + 2vh);
     transform: translate(-50%,-50%);
     color: orange;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+/* .gameboard {
+    background: red;
+    /* padding-bottom:100%;
+    height: 0;
+} */
+
